[package]
name = "commit_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.3.0"
log = { version = "0.4.28", features = ["std", "serde"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }
